--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype HTML>
 <html>
 <head>
 <meta charset="utf-8" />
@@ -7,8 +7,20 @@
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 
 <![endif]-->
+<script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
 </head>
-<body>
-test
+<body style='margin:0px; overflow:hidden;'>
+<a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
+    <a-assets>
+        <a-asset-item id="sample-obj" src="model_obj/santa/santa.obj"></a-asset-item>
+        <a-asset-item id="sample-mtl" src="model_obj/santa/santa.mtl"></a-asset-item>
+    </a-assets>
+    <a-marker preset="hiro">
+        <a-obj-model id="sample" src="#sample-obj" mtl="#sample-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
+        <a-text value="Merry X'mas !！！" position="0 1.3 0" align="center"></a-text>
+    </a-marker>
+    <a-entity camera></a-entity>
+</a-scene>
 </body>
 </html>
